[UI] fix tooltip bug in safari
Fix small gap rendered between tooltip body and arrow in Safari.

closes #2715

--- a/src/clr-angular/popover/tooltip/_tooltips.clarity.scss
+++ b/src/clr-angular/popover/tooltip/_tooltips.clarity.scss
@@ -31,7 +31,7 @@
 
   &::before {
     position: absolute;
-    #{$oppA}: -0.375rem;
+    #{$oppA}: -0.35rem;
     #{$oppB}: 0;
     #{$dirA}: auto;
     #{$dirB}: auto;
